welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
maxValue:1: error: identifier expected but integer literal found.
def maxValue(nums:Array[Int]): Int = {var max = T[0]
                                                  ^maxValue:2: error: ']' expected but ';' found.
                                      for (i<-nums){if (i > max){max=i}}
^